	* stopped the user profile visitors logger from logging visits from anonymous users
	* changed the abstract community application widget's getConfiguration() method to return the widget's configuration instead of the whole community configuration
	* added a helper to show information about a plugin in the backend's page module

2008-11-14 Frank Naegler  <typo3@naegler.net>

	* added check of results in userGateway

2008-11-12 Ingo Renner  <ingo@typo3.org>

	* fixed naming of the widget widget
	* added a last visitors widget to the user profile
	* added a new index to the relations table
	* changed the type of some fields for the relations table

2008-11-12 Frank Naegler  <typo3@naegler.net>

	* added hook connector to the profile model
	* added interface tx_community_UserProfileProvider

2008-11-11 Ingo Renner  <ingo@typo3.org>

	* added reloading to the flexform

2008-11-11 Frank Naegler  <typo3@naegler.net>

	* added css class names to the userProfile.profileActionsWidget

2008-11-10 Frank Naegler  <typo3@naegler.net>

	* change pi_linkTP to pi_linkToPage in the profile actions, all request should go the userProfile
	* added cObj viewhelper to userlist

2008-11-09 Frank Naegler  <typo3@naegler.net>

	* added date view helper to the userList view
	* added subpart switch for empty result list to the userList view
	* added result counter as variable to the userList view

2008-11-07 Frank Naegler  <typo3@naegler.net>

	* change getFirstname to getNickname in the profileActionWidget, maybe this should be set by config later.

2008-11-06 Ingo Renner  <ingo@typo3.org>

	* fixed bug #1770: adding label for the settings groups in the privacy apps
	* fixed bug #1776: LLL-Viewhelper: values can't be overwritten by TypoScript
	* fixed bug #1750: edit relationship does'nt work correctly

2008-11-05 Frank Naegler  <typo3@naegler.net>

	* change date viewhelper, so you can define an optional dateformat by marker

2008-11-03 Frank Naegler  <typo3@naegler.net>
