@@ -8,6 +8,7 @@
 		<languageKey index="default" type="array">
 			<label index="tt_content.list_type_communityApplication">Community Application</label>
 			<label index="tt_content.list_type_editGroup">Community Edit group</label>
+			<label index="fe_users.tx_community_statusmessage">Status Message</label>
 			<label index="fe_users.tx_community_sex.I.0">Male</label>
 			<label index="fe_users.tx_community_sex.I.1">Female</label>
 			<label index="fe_users.tx_community_sex">Sex</label>
